--- a/test/context.html
+++ b/test/context.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="UTF-8">
-    <title>sandbox() method test page</title>
+    <title>context() method test page</title>
     <style>
     body {
         color: red;
