update element methods, add $Node#then

--- a/test/animation.html
+++ b/test/animation.html
@@ -97,7 +97,11 @@
         bars = bar.findAll(".bar-item"),
         lastBars = bar.next(".bar").findAll(".bar-item"),
         animatableBar = DOM.find(".animatable-bar-item"),
-        andRemove = function(el) { el.remove().show()[0].cssText = "" },
+        andRemove = function(el) {
+            el.remove().show().then((n) => {
+                n.cssText = ""
+            });
+        },
         it = 1;
 
     bars[1].remove();
